testfx/errors/error_tests/edge_24_logic_keywords.fx
// Python/其他语言的逻辑关键字
x := true
y := false

if (x and y) {
    println("both true")
}

if (x or y) {
    println("at least one true")
}

if (not x) {
    println("x is false")
}
